<resources>
    <string name="app_name">User Password Submit</string>
    <string name="username">Username</string>
    <string name="restrictedPass">Password</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_login">Login</string>
    <string name="nexusDescription">Nexus Lineup</string>
    <string name="LanguagePreference">Language Preference</string>
    <string-array name="question_array_english">
        <item> Student</item>
        <item> Staff </item>
        <item> Faculty </item>
        <item> None </item>
    </string-array>
    <string-array name="question_array_spanish">
        <item> Etudiente</item>
        <item> Staffe </item>
        <item> Faculte </item>
        <item> Rien </item>
    </string-array>


    <string name="lang_pref_english">Language preference? </string>
    <string name="lang_pref_spanish">Preferencia de idioma</string>
    <string name="question_english">Member of Sac City?</string>
    <string name="question_spanish">Member de Sac City?</string>
    <string name="state_prompt_english">Enter your state: </string>
    <string name="state_prompt_spanish">Ingresa tu estado: </string>
    <string name="city_prompt_english">Enter your city: </string>
    <string name="email_prompt_spanish">Ingresa tu email: </string>
    <string name="email_prompt_english">Enter your email: </string>
    <string name="city_prompt_spanish">Ingresa tu ciudad: </string>
    <string name="email">email</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="ca">CA</string>
    <string name="sacramento">Sacramento</string>
    <string name="submit">SUBMIT</string>

    <string name="picture_description">A Selfie of myself</string>
    <string name="rate_me">Rate Me</string>
    <string name="submitTwo">Submit</string>
    <string name="result">Result :</string>
    <string name="blank" />
    <string name="my_app_bio">My app/Bio</string>
    <string name="thank_you">Thank you!</string>
    <string name="a_screenshot_of_my_app">A screenshot of my app</string>
    <string name="bio_app">Hello, my name is Chris Mataragas, I\'m majoring in Computer Information
    Science here at Sacramento City College, I plan on transferring to a state university at a
    later date. The app I have built for the purpose of this class is pictured above, it is a simple
    note taking app that lets users create and access notes very quickly. I appreciate you taking
    the time to check out my app and I hope you try it out on Google Play!</string>


</resources>
